--- a/tela.css
+++ b/tela.css
@@ -59,6 +59,17 @@ body*{
 #login > a{
     color: #00ff8052;
 }
+#cadastro{
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 30px 35px;
+    background: #2f2841;
+    border-radius: 20px;
+    box-shadow: 0px 10px 40px #00000056;
+    }
 .insere{
     width: 100%;
     display: flex;
