--- a/tela.css
+++ b/tela.css
@@ -3,6 +3,7 @@
 body{
     margin: 0;
     font-family: 'Kanit', sans-serif;
+   
 }
 body*{
     box-sizing: border-box;
@@ -15,7 +16,7 @@ body*{
     justify-content: center;
     align-items: center;
 }
-#esquerda{
+#esquerda {
     width: 50vw;
     height: 100vh;
     display: flex;
@@ -27,10 +28,10 @@ body*{
     color: rgb(51, 172, 115);
     font-size: 3vw;
 }
-#imagem{
+.imagem{
     width: 35vw;
 }
-#direita{
+#direita {
     width: 50vw;
     height: 100vh;
     display: flex;
@@ -38,7 +39,7 @@ body*{
     align-items: center;
 }
 #login{
-    width: 60%;
+    width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -56,20 +57,6 @@ body*{
 #login > p{
     color: #f0ffffde;
 }
-#login > a{
-    color: #00ff8052;
-}
-#cadastro{
-    width: 60%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 30px 35px;
-    background: #2f2841;
-    border-radius: 20px;
-    box-shadow: 0px 10px 40px #00000056;
-    }
 .insere{
     width: 100%;
     display: flex;
